fix alignment in header

--- a/src/client/main/styles.css
+++ b/src/client/main/styles.css
@@ -92,7 +92,7 @@ ul {
   @apply list-disc;
 }
 
-li {
+li:not(header li) {
   @apply mb-3;
 }
 
